[gd_scene format=3 uid="uid://p5i3or1lecg0"]

[ext_resource type="Script" uid="uid://bivlscb68yong" path="res://systems/main_menu_ui.gd" id="1_oh28q"]
[ext_resource type="Texture2D" uid="uid://onvi88rotk4m" path="res://cutscenes/assets/bg_mansion.png" id="2_rc1mk"]
[ext_resource type="PackedScene" uid="uid://coxkk35x4355w" path="res://systems/savesystem_ui.tscn" id="3_473j0"]
[ext_resource type="FontFile" uid="uid://paxdsahot7r8" path="res://systems/fonts/Inter-VariableFont_opsz,wght.ttf" id="3_u4gf3"]
[ext_resource type="FontFile" uid="uid://dxk7xhth31dks" path="res://systems/fonts/Cinzel-VariableFont_wght.ttf" id="4_yj3pl"]
[ext_resource type="AudioStream" uid="uid://c2hsg55vb76q8" path="res://systems/sounds/sound_main-menu.mp3" id="6_aiwrd"]

[sub_resource type="Gradient" id="Gradient_6liry"]
colors = PackedColorArray(0.09411765, 0.011764706, 0.011764706, 0.5882353, 0.74509805, 0.8862745, 0.93333334, 0.5882353)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_me7c7"]
gradient = SubResource("Gradient_6liry")
width = 512
height = 512
fill_from = Vector2(0, 0.0128205)

[sub_resource type="FontVariation" id="FontVariation_6u8tq"]
base_font = ExtResource("3_u4gf3")
variation_opentype = {
1869640570: 14,
2003265652: 700
}
spacing_glyph = -1

[sub_resource type="Theme" id="Theme_sfk31"]
default_font = SubResource("FontVariation_6u8tq")
default_font_size = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4gf3"]
bg_color = Color(0.08235294, 0.08235294, 0.08235294, 0.12941177)
expand_margin_left = 75.0
expand_margin_top = 5.0
expand_margin_right = 75.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6u8tq"]
bg_color = Color(0.125, 0, 0, 1)
expand_margin_left = 75.0
expand_margin_top = 5.0
expand_margin_right = 75.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aiwrd"]
bg_color = Color(0.06640625, 0, 0, 1)
expand_margin_left = 75.0
expand_margin_top = 5.0
expand_margin_right = 75.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfk31"]
bg_color = Color(1, 1, 1, 0)
expand_margin_left = 75.0
expand_margin_top = 5.0
expand_margin_right = 75.0
expand_margin_bottom = 5.0

[sub_resource type="FontVariation" id="FontVariation_yj3pl"]
base_font = ExtResource("4_yj3pl")
variation_opentype = {
2003265652: 900
}
spacing_glyph = 2

[node name="MainMenu" type="CanvasLayer" unique_id=126099254]
script = ExtResource("1_oh28q")

[node name="CanvasLayer" type="Control" parent="." unique_id=259918033]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="mainmenu_bg" type="TextureRect" parent="CanvasLayer" unique_id=1248019338]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rc1mk")
expand_mode = 1
stretch_mode = 4

[node name="mainmenu_bg_texture" type="TextureRect" parent="CanvasLayer" unique_id=9457802]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_me7c7")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Control" type="VBoxContainer" parent="CanvasLayer" unique_id=653797785]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -198.0
offset_right = 143.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18
alignment = 2

[node name="btn_newgame" type="Button" parent="CanvasLayer/Control" unique_id=1676454157]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme = SubResource("Theme_sfk31")
theme_override_styles/normal = SubResource("StyleBoxFlat_u4gf3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6u8tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_aiwrd")
theme_override_styles/focus = SubResource("StyleBoxFlat_sfk31")
text = "NEW GAME"

[node name="btn_continue" type="Button" parent="CanvasLayer/Control" unique_id=1870591479]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme = SubResource("Theme_sfk31")
theme_override_styles/normal = SubResource("StyleBoxFlat_u4gf3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6u8tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_aiwrd")
theme_override_styles/focus = SubResource("StyleBoxFlat_sfk31")
text = "CONTINUE"

[node name="SaveSystem_UI" parent="CanvasLayer/Control/btn_continue" unique_id=1475881393 instance=ExtResource("3_473j0")]
visible = false

[node name="btn_quit" type="Button" parent="CanvasLayer/Control" unique_id=1762319346]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme = SubResource("Theme_sfk31")
theme_override_styles/normal = SubResource("StyleBoxFlat_u4gf3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6u8tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_aiwrd")
theme_override_styles/focus = SubResource("StyleBoxFlat_sfk31")
text = "QUIT"

[node name="title" type="RichTextLabel" parent="CanvasLayer" unique_id=1418091984]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -81.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.81650734, 0.8203125, 0.8139038, 1)
theme_override_colors/font_shadow_color = Color(0.047058824, 0, 0, 0.72156864)
theme_override_constants/shadow_outline_size = 0
theme_override_constants/shadow_offset_x = -5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/normal_font = SubResource("FontVariation_yj3pl")
theme_override_font_sizes/normal_font_size = 80
text = "Mansion Of Peculiarities"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=1445214324]
stream = ExtResource("6_aiwrd")
pitch_scale = 1.5

[connection signal="pressed" from="CanvasLayer/Control/btn_newgame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/btn_continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/btn_quit" to="." method="_on_quit_pressed"]
